changed vars to specific colors
vars don't work in emails

--- a/email/interactive.html
+++ b/email/interactive.html
@@ -70,8 +70,8 @@
       }
 
       ::selection {
-          background: var(--primary);
-          color: var(--black)
+          background: #5FA084;
+          color: #212121
       }
 
       table,
@@ -109,11 +109,11 @@
 
       table,
       td {
-          color: var(--white)
+          color: #EFEFEF
       }
 
       #u_body a {
-          color: var(--primary);
+          color: #5FA084;
           text-decoration: underline
       }
 
@@ -174,8 +174,8 @@
     margin: 0;
     padding: 0;
     -webkit-text-size-adjust: 100%;
-    background-color: var(--background-dark);
-    color: var(--white)">
+    background-color: #253331;
+    color: #EFEFEF">
 
     <!--[if IE]><div class="ie-container"><![endif]-->
     <!--[if mso]><div class="mso-container"><![endif]-->
@@ -185,7 +185,7 @@
       table-layout: fixed;border-spacing: 0;
       mso-table-lspace: 0pt;mso-table-rspace: 0pt;
       vertical-align: top;min-width: 320px;
-      Margin: 0 auto;background-color: var(--background-dark);
+      Margin: 0 auto;background-color: #253331;
       width:100%" cellpadding="0" cellspacing="0">
       <tbody>
         <tr style="vertical-align: top">
@@ -193,7 +193,7 @@
             word-break: break-word;
             border-collapse: collapse !important;
             vertical-align: top">
-            <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td align="center" style="background-color: var(--background-dark);"><![endif]-->
+            <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td align="center" style="background-color: #253331;"><![endif]-->
             <div class="u-row-container" style="
               padding: 0px;
               background-color: transparent">
@@ -214,7 +214,7 @@
                   height: 100%;
                   background-color: transparent;">
                   <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding: 0px;background-color: transparent;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width:600px;"><tr style="background-color: transparent;"><![endif]-->
-                  <!--[if (mso)|(IE)]><td align="center" width="600" style="background-color: var(--background);width: 600px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;" valign="top"><![endif]-->
+                  <!--[if (mso)|(IE)]><td align="center" width="600" style="background-color: #2C3D3B;width: 600px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;" valign="top"><![endif]-->
                   <div class="u-col u-col-100"
                     style="
                     max-width: 320px;
@@ -222,7 +222,7 @@
                     display: table-cell;
                     vertical-align: top;">
                     <div style="
-                    background-color: var(--background);
+                    background-color: #2C3D3B;
                     height: 100%;
                     width: 100% !important;">
                       <!--[if (!mso)&(!IE)]><!-->
@@ -296,7 +296,7 @@
                   height: 100%;
                   background-color: transparent;">
                   <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding: 0px;background-color: transparent;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width:600px;"><tr style="background-color: transparent;"><![endif]-->
-                  <!--[if (mso)|(IE)]><td align="center" width="600" style="background-color: var(--background);width: 600px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px;" valign="top"><![endif]-->
+                  <!--[if (mso)|(IE)]><td align="center" width="600" style="background-color: #2C3D3B;width: 600px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px;" valign="top"><![endif]-->
                   <div class="u-col u-col-100"
                     style="
                     max-width: 320px;
@@ -305,7 +305,7 @@
                     vertical-align: top;">
                     <div
                       style="
-                      background-color: var(--background);
+                      background-color: #2C3D3B;
                       height: 100%;
                       width: 100% !important;
                       border-radius: 0px;
@@ -390,7 +390,7 @@
                                 font-family:'Poppins',sans-serif;"
                                 align="left">
                                 <div align="center">
-                                  <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;font-family:'Poppins',sans-serif;"><tr><td style="font-family:'Poppins',sans-serif;" align="center"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://fededebate.github.io/Evento/" style="height:37px; v-text-anchor:middle; width:174px;" arcsize="11%" stroke="f" fillcolor="var(--primary)"><w:anchorlock/><center style="color:var(--background);font-family:'Poppins',sans-serif;"><![endif]-->
+                                  <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;font-family:'Poppins',sans-serif;"><tr><td style="font-family:'Poppins',sans-serif;" align="center"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://fededebate.github.io/Evento/" style="height:37px; v-text-anchor:middle; width:174px;" arcsize="11%" stroke="f" fillcolor="#5FA084"><w:anchorlock/><center style="color:#2C3D3B;font-family:'Poppins',sans-serif;"><![endif]-->
                                   <a href="mailto:fededebate@gmail.com?subject=Inscripci%C3%B3n%20de%20Prepas" target="_blank" class="v-size-width"
                                     style="
                                     box-sizing: border-box;
@@ -399,8 +399,8 @@
                                     text-decoration: none;
                                       -webkit-text-size-adjust: none;
                                     text-align: center;
-                                    color: var(--background);
-                                    background-color: var(--primary);
+                                    color: #2C3D3B;
+                                    background-color: #5FA084;
                                     border-radius: 4px;
                                       -webkit-border-radius: 4px;
                                       -moz-border-radius: 4px;
@@ -515,7 +515,7 @@
                                   mso-table-lspace: 0pt;
                                   mso-table-rspace: 0pt;
                                   vertical-align: top;
-                                  border-top: 1px solid var(--white);
+                                  border-top: 1px solid #EFEFEF;
                                     -ms-text-size-adjust: 100%;
                                     -webkit-text-size-adjust: 100%">
                                   <tbody>
@@ -616,7 +616,7 @@
                                     style="
                                     padding:5px 15px;
                                     display:inline-block;
-                                    color:var(--white);
+                                    color:#EFEFEF;
                                     font-family:'Poppins',sans-serif;
                                     font-size:14px;
                                     text-decoration:none"
@@ -629,7 +629,7 @@
                                     style="
                                     padding:5px 15px;
                                     display:inline-block;
-                                    color:var(--white);
+                                    color:#EFEFEF;
                                     font-family:'Poppins',sans-serif;
                                     font-size:14px"
                                     class="v-padding v-font-size hide-mobile">
@@ -641,7 +641,7 @@
                                     style="
                                     padding:5px 15px;
                                     display:inline-block;
-                                    color:var(--white);
+                                    color:#EFEFEF;
                                     font-family:'Poppins',sans-serif;
                                     font-size:14px;text-decoration:none"
                                     class="v-padding v-font-size">
