--- a/email/interactive.html
+++ b/email/interactive.html
@@ -248,7 +248,7 @@
                                 <table width="100%" cellpadding="0" cellspacing="0" border="0">
                                   <tr>
                                     <td style="padding-right: 0px;padding-left: 0px;" align="center">
-                                      <img align="center" border="0" src="https://raw.githubusercontent.com/FEdeDebate/Evento/main/images/fullTransparentLight.svg" alt="image" title="image"
+                                      <img align="center" border="0" src="https://raw.githubusercontent.com/FEdeDebate/Evento/main/images/fullTransparentLight.png" alt="FED Logo" title="FED Logo"
                                         style="
                                         outline: none;
                                         text-decoration: none;
@@ -256,10 +256,8 @@
                                         clear: both;
                                         display: inline-block !important;
                                         border: none;
-                                        height: auto;
                                         float: none;
-                                        width: 65%;
-                                        max-width: 390px;" width="390" class="v-src-width v-src-max-width" />
+                                        max-width: 390px;" width="65%" height="auto" class="v-src-width v-src-max-width" />
                                     </td>
                                   </tr>
                                 </table>
@@ -574,7 +572,7 @@
                                             border-collapse: collapse !important;
                                             vertical-align: top">
                                             <a href="https://instagram.com/FEdeDebate/" title="Instagram" target="_blank">
-                                              <img src="https://raw.githubusercontent.com/FEdeDebate/Evento/main/images/instagram.svg" alt="Instagram" title="Instagram" width="32"
+                                              <img src="https://raw.githubusercontent.com/FEdeDebate/Evento/main/images/instagram.png" alt="Instagram" title="Instagram" width="32"
                                                 style="
                                                 outline: none;
                                                 text-decoration: none;
