--- a/email/interactive.html
+++ b/email/interactive.html
@@ -341,9 +341,8 @@
                                   font-weight: normal;
                                   font-family: 'Poppins',sans-serif;
                                   font-size: 24px;">
-                                  <div><strong>¡Felicidades!</strong>
-                                    <br/>
-                                    <strong>Tu Preparatoria ha Sido Invitada a Formar Parte del Foro Estudiantil de Debate</strong>
+                                  <div>
+                                    <b>replace-title</b>
                                   </div>
                                 </h1>
                               </td>
@@ -367,9 +366,7 @@
                                   line-height: 170%;
                                   text-align: center;
                                   word-wrap: break-word;">
-                                  <p style="font-size: 14px; line-height: 170%;">Una descripción aquí de qué es FED.
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                                  <p style="font-size: 14px; line-height: 170%;">replace-subtitle</p>
                                 </div>
                               </td>
                             </tr>
@@ -389,7 +386,7 @@
                                 align="left">
                                 <div align="center">
                                   <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;font-family:'Poppins',sans-serif;"><tr><td style="font-family:'Poppins',sans-serif;" align="center"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://fededebate.github.io/Evento/" style="height:37px; v-text-anchor:middle; width:174px;" arcsize="11%" stroke="f" fillcolor="#5FA084"><w:anchorlock/><center style="color:#2C3D3B;font-family:'Poppins',sans-serif;"><![endif]-->
-                                  <a href="mailto:fededebate@gmail.com?subject=Inscripci%C3%B3n%20de%20Prepas" target="_blank" class="v-size-width"
+                                  <a href="replace-mainButtonLink" target="_blank" class="v-size-width"
                                     style="
                                     box-sizing: border-box;
                                     display: inline-block;
@@ -411,7 +408,7 @@
                                     <span class="v-line-height v-padding"
                                       style="display:block;padding:10px 20px;line-height:120%;">
                                       <p style="font-size: 20px; line-height: 120%;">
-                                        <span style="font-size: 20px; line-height: 16.8px;"><strong>Inscribe a tu Prepa</strong></span></p>
+                                        <span style="font-size: 20px; line-height: 16.8px;"><b>replace-mainButtonText</b></span></p>
                                     </span>
                                   </a>
                                   <!--[if mso]></center></v:roundrect></td></tr></table><![endif]-->
