replaced the bottom message with a variable

--- a/email/interactive.html
+++ b/email/interactive.html
@@ -666,9 +666,7 @@
                                   line-height: 170%;
                                   text-align: center;
                                   word-wrap: break-word;">
-                                  <p style="font-size: 14px; line-height: 170%;">Has recibido este correo ya que hemos determinado que estás a 
-                                    cargo del programa de Debate en tu preparatoria. ¿No es el caso?
-                                    <a href="mailto:fededebate@gmail.com?subject=Inscripci%C3%B3n%20de%20Prepas">Haznos saber quién lo es</a>.</p>
+                                  <p style="font-size: 14px; line-height: 170%;">replace-bottomMessage</p>
                                 </div>
                               </td>
                             </tr>
