added informative email

--- a/email/interactive.html
+++ b/email/interactive.html
@@ -17,9 +17,8 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--<![endif]-->
 
-    <title>Invitación a FED</title>
+    <title>replace-title</title>
     
-    <!-- add stylesheet -->
     <style>
       @media only screen and (min-width:620px) {
           .u-row {
