--- a/email/sent/highschool invitations.html
+++ b/email/sent/highschool invitations.html
@@ -16,7 +16,7 @@
     <!--[if !mso]><!-->
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--<![endif]-->
-    <title>replace-title</title>
+    <title>Invitación a FED</title>
 
     <style type="text/css">
       @media only screen and (min-width: 620px) {
@@ -311,14 +311,17 @@
                                   <p style="font-size: 14px; line-height: 170%;"> </p>
                                   <p style="line-height: 170%; font-size: 14px;"><span
                                       style="font-family:'Poppins', sans-serif;"><span
-                                        style="font-size: 32px; line-height: 30.6px;"><b>replace-title</b></span></span>
+                                        style="font-size: 32px; line-height: 30.6px;"><b>Invitación a FED</b></span></span>
                                   </p>
                                   <p style="font-size: 14px; line-height: 170%;"> </p>
                                   <p style="font-size: 14px; line-height: 170%;"><span
-                                      style="font-family:'Poppins', sans-serif;">replace-message</span></p>
+                                      style="font-family:'Poppins', sans-serif;">
+                                      Buen día!<br/>
+                                      En nombre de toda la mesa de FED, les extiendo la más cordial invitación a participar en la primera edición de FED. Somos un concurso de debate parlamentario, siguiendo una adaptación del formato parlamentario británico.<br/>El objetivo de nuestro evento es ayudar a que nuestros participantes desarrollen sus habilidades de debate y discusión. El evento será el 5 de Octubre de 3:00 a 8:00 con sede en Prepa Tec Campus Santa Catarina. El evento tendrá un costo de $50 MXN por participante ($200 MXN por equipo). 
+                                      </span></p>
                                   <p style="font-size: 14px; line-height: 170%;"> </p>
                                   <p style="font-size: 14px; line-height: 170%;"><span
-                                      style="font-family:'Poppins', sans-serif;"><b>replace-goodbye</b></span></p>
+                                      style="font-family:'Poppins', sans-serif;"><b>Esperamos que tenga un excelente día.</b></span></p>
                                 </div>
                               </td>
                             </tr>
