--- a/email/sent/highschool invitations.html
+++ b/email/sent/highschool invitations.html
@@ -307,7 +307,7 @@
                                 font-family:'Poppins',sans-serif;"
                                 align="left">
                                 <div style="color: #EFEFEF; line-height: 170%; text-align: left; word-wrap: break-word;">
-                                  <p style="font-size: 14px; line-height: 170%;"><b>fecha: </b>replace-date</p>
+                                  <p style="font-size: 14px; line-height: 170%;"><b>fecha: </b>12-Sep-22</p>
                                   <p style="font-size: 14px; line-height: 170%;"> </p>
                                   <p style="line-height: 170%; font-size: 14px;"><span
                                       style="font-family:'Poppins', sans-serif;"><span
