--- a/email/informative.html
+++ b/email/informative.html
@@ -464,7 +464,7 @@
                                   line-height: 140%;">Si tienes cualquier pregunta, por favor
                                     contáctanos en <a rel="noopener" href="mailto:FEdeDebate@gmail.com?subject=&body="
                                       target="_blank">FEdeDebate@gmail.com</a> o visita nuestro <a rel="noopener"
-                                      href="https://fededebate.github.io/Evento/" target="_blank">sitio web</a>.</p>
+                                      href="https://fededebate.github.io/FED/" target="_blank">sitio web</a>.</p>
                                 </div>
                               </td>
                             </tr>
