--- a/email/interactive.html
+++ b/email/interactive.html
@@ -384,7 +384,7 @@
                                 font-family:'Poppins',sans-serif;"
                                 align="left">
                                 <div align="center">
-                                  <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;font-family:'Poppins',sans-serif;"><tr><td style="font-family:'Poppins',sans-serif;" align="center"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://fededebate.github.io/Evento/" style="height:37px; v-text-anchor:middle; width:174px;" arcsize="11%" stroke="f" fillcolor="#5FA084"><w:anchorlock/><center style="color:#2C3D3B;font-family:'Poppins',sans-serif;"><![endif]-->
+                                  <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;font-family:'Poppins',sans-serif;"><tr><td style="font-family:'Poppins',sans-serif;" align="center"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://fededebate.github.io/FED/" style="height:37px; v-text-anchor:middle; width:174px;" arcsize="11%" stroke="f" fillcolor="#5FA084"><w:anchorlock/><center style="color:#2C3D3B;font-family:'Poppins',sans-serif;"><![endif]-->
                                   <a href="replace-mainButtonLink" target="_blank" class="v-size-width"
                                     style="
                                     box-sizing: border-box;
@@ -483,7 +483,7 @@
                                   style="line-height: 170%; text-align: center; word-wrap: break-word;">
                                   <p style="font-size: 14px; line-height: 170%;">Si tienes cualquier pregunta, por favor
                                     contáctanos en <a href="mailto:fededebate@gmail.com?subject=Inscripci%C3%B3n%20de%20Prepas">FEdeDebate@gmail.com</a> o visita
-                                    nuestro <a href="https://fededebate.github.io/Evento/" target="_blank">sitio web</a>.
+                                    nuestro <a href="https://fededebate.github.io/FED/" target="_blank">sitio web</a>.
                                   </p>
                                 </div>
                               </td>
@@ -606,7 +606,7 @@
                                 <div class="menu" style="text-align:center">
                                   <!--[if (mso)|(IE)]><table role="presentation" border="0" cellpadding="0" cellspacing="0" align="center"><tr><![endif]-->
                                   <!--[if (mso)|(IE)]><td style="padding:5px 15px"><![endif]-->
-                                  <a href="https://fededebate.github.io/Evento/" target="_blank"
+                                  <a href="https://fededebate.github.io/FED/" target="_blank"
                                     style="
                                     padding:5px 15px;
                                     display:inline-block;
