--- a/email/sent/highschool invitations.html
+++ b/email/sent/highschool invitations.html
@@ -228,7 +228,7 @@
                                         height: auto;
                                         float: none;
                                         width: 100%;
-                                        max-width: 550px;
+                                        max-width: 350px;
                                         margin-top: 5rem;"
                                         width="550" class="v-src-width v-src-max-width" />
                                     </td>
@@ -307,7 +307,7 @@
                                 font-family:'Poppins',sans-serif;"
                                 align="left">
                                 <div style="color: #EFEFEF; line-height: 170%; text-align: left; word-wrap: break-word;">
-                                  <p style="font-size: 14px; line-height: 170%;"><b>fecha: </b>12-Sep-22</p>
+                                  <p style="font-size: 14px; line-height: 170%;"><b>Fecha: </b>13 de septiembre, 2022</p>
                                   <p style="font-size: 14px; line-height: 170%;"> </p>
                                   <p style="line-height: 170%; font-size: 14px;"><span
                                       style="font-family:'Poppins', sans-serif;"><span
@@ -467,7 +467,7 @@
                                   line-height: 140%;">Si tienes cualquier pregunta, por favor
                                     contáctanos en <a rel="noopener" href="mailto:FEdeDebate@gmail.com?subject=&body="
                                       target="_blank">FEdeDebate@gmail.com</a> o visita nuestro <a rel="noopener"
-                                      href="https://fededebate.github.io/Evento/" target="_blank">sitio web</a>.</p>
+                                      href="https://linktr.ee/FEdeDebate" target="_blank">linktree</a>.</p>
                                 </div>
                               </td>
                             </tr>
